[package]
name = "job"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.154", features=["derive"] }
serde_with = { version = "2.3.3", features = ["base64"] }
filecoin_spec = { path = "../filecoin_spec" }
uuid = { version = "1.3.1", features=["v4", "serde"] }

[dev-dependencies]
filecoin_spec = { path = "../filecoin_spec", features = ["test-utils"] }
serde_json = "1.0.96"

[features]
test-utils = []
