[package]
name = "lotus"
version = "0.1.0"
edition = "2021"
description = "Filecoin lotus JSON-RPC API wrapper"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.19.2", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
uuid="1.1.2"
derive_builder = "0.11.2"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3"
base64 = "0.13.1"
fvm_ipld_encoding = "0.3.0"
fvm_shared = "3.3.1"
bytes = "1.0"
encoding_rs = "0.8"
mime = "0.3.16"
tracing = "0.1.37"
async-trait = "0.1.68"
mockall = "0.11.4"
thiserror = "1.0.40"
filecoin_spec = { path = "../filecoin_spec" }
url = { version = "2.4.0", features = ["serde"] }
cid = { version = "0.8.5", features = ["serde", "serde-codec"] }
serde_with = { version = "3.0.0", features = ["base64"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
test-log = { version = "0.2.11", features = ["trace"] }
