[package]
name = "filecoin_spec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.154", features = ["derive"] }
serde_with = { version = "2.3.3", features = ["base64"] }
unsigned-varint = { version = "0.7.1" }

[features]
test-utils = []
