[package]
name = "job_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.18"
hyper = "0.14.26"
mockall = "0.11.4"

filecoin_spec = { path = "../filecoin_spec" }
job = { path = "../job" }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
serde_json = "1.0.96"
reqwest = { version = "0.11.18", features = ["json"] }
tracing = "0.1.37"
